test/shared/applications/valid/withDirectories/data/server/writeModel/sampleContext/sampleAggregate/initialState.js
'use strict';

const { initialState } = require('../../../../base/server/writeModel/sampleContext/sampleAggregate');

module.exports = initialState;
