test/shared/applications/invalid/withWrongRequire/data/server/writeModel/sampleContext/sampleAggregate.js
'use strict';

const nonExistent = require('non-existent');

const { initialState, commands, events } = require('../../../base/server/writeModel/sampleContext/sampleAggregate');

module.exports = { initialState, commands, events };
